--- a/lab1/lab1.csproj
+++ b/lab1/lab1.csproj
@@ -83,5 +83,8 @@
   <ItemGroup>
     <None Include="teksture.jpeg" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="task1.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
